--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".Widget.MovieCatalogueWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/movie_catalogue_info" />
+        </receiver>
+
         <activity android:name=".View.favorite.MyFavorite" />
         <activity android:name=".View.detail.DetailMovieActivity" />
         <activity android:name=".View.main.MainActivity">
