--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.search.SearchActivity"></activity>
+        <activity android:name=".View.setting.SettingActivity"></activity>
+        <activity android:name=".View.search.SearchActivity" />
 
         <receiver android:name=".Widget.MovieCatalogueWidget">
             <intent-filter>
